# dfa-blog-api

./: Procfile  README.md  db.sqlite3  nixpacks.toml  pyproject.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
posts/: models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
