[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django~=4.2.0",
    "django-allauth>=65.11.1",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "environs[django]>=14.3.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "whitenoise>=6.9.0",
]
